fixing navbar on mobile

--- a/browser/scss/navbar.scss
+++ b/browser/scss/navbar.scss
@@ -38,6 +38,7 @@ navbar a {
 		top: 0px;
 		right: 0px;
 		z-index: 9999;
+		margin-bottom: 20px;
 	}
 	.navbar-collapse {
 		background-color: #F5F5F5;
